# famiglia-core

./: .dockerignore  .env.example  .gitignore  .releaserc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Dockerfile  Dockerfile.mattermost  GEMINI.md  LICENSE  README.md  RELEASE.md  SECURITY.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  main.py  package-lock.json  package.json  pyproject copy.toml  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  discovery.yml  feature_request.yml  foundation.yml  refactoring.yml  vision_proposal.md
.github/workflows/: docker-staging.yml  pages.yml  release.yml  test.yml
docs/: VISION.md  agent_roster_la_famiglia.md
scripts/: migrate_souls_to_db.py
src/: __init__.py
src/agents/: README.md  alfredo.py  base_agent.py  bella.py  kowalski.py  riccado.py  rossini.py  tommy.py  vito.py
src/db/: init_db.py
src/famiglia_core/: cli.py
src/infra/: README.md
src/observability/: README.md  langfuse_util.py
tests/: README.md  conftest.py  test_agents.py  test_alfredo_batched_tasks.py  test_alfredo_scheduling.py  test_base_agent_context.py  test_communication.py  test_core.py  test_docker_integrity.py  test_import_consistency.py  test_langfuse.py  test_llm.py  test_llm_client.py  test_main.py  test_mattermost_client.py  test_observability.py  test_riccado.py  test_rossini.py  test_rossini_github_write.py  test_routing_enrichment.py  test_runtime_filtering.py  test_scheduled_task_access.py  test_slack_client.py  test_task_notification.py  test_unified_tasks.py  verify_implementation.py  verify_phase1_week5_6.py
tests/agents/: test_agent_identity.py  test_agents.py  test_base_agent_context.py  test_communication.py  test_complete.py  test_context_store.py  test_dual_model_policy.py  test_gemma4_cleaning.py  test_llm.py  test_orchestration.py  test_orchestration_features.py  test_riccado.py  test_riccado_github.py  test_rossini.py  test_rossini_github.py  test_rossini_github_write.py  test_rossini_market_research.py  test_rossini_milestone_creation.py  test_rossini_research.py  test_scheduling_supervisor.py  test_state.py  test_task_tools.py  verify_rossini_config.py
tests/core/: test_routing_enrichment.py
tests/db/: test_context_store.py  test_context_store_notifications.py  test_db_seed.py  test_user_connections_store.py
tests/observability/: test_audit.py  test_langfuse_trace.py  test_observability.py
(+309 files in other folders)
