[project]
name = "famiglia-core"
version = "0.9.0"
description = "The engine of Don Jimmy's AI Famiglia."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "redis>=7.0.1",
    "slack-sdk>=3.40.1",
    "slack-bolt>=1.22.0",
    "requests>=2.32.5",
    "cryptography>=46.0.5",
    "pyjwt>=2.11.0",
    "notion-client>=3.0.0",
    "pyyaml>=6.0.3",
    "langgraph>=0.6.11",
    "langchain-core>=0.3.31",
    "langchain>=0.3.0",
    "langfuse~=2.53.8",
    "fastapi>=0.135.2",
    "uvicorn>=0.42.0",
    "pydantic-settings>=2.13.1",
    "duckdb>=1.1.3",
    "pytz>=2024.1",
    "mattermostdriver>=7.3.2",
    "openai>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "redis>=7.0.1",
    "slack-sdk>=3.40.1",
]

[project.scripts]
truncate-db = "famiglia_core.db.truncate:truncate_db"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/famiglia_core/__init__.py:__version__"]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "pip install uv && uv build"
commit_parser = "conventional"
major_on_zero = false
upload_to_pypi = false
upload_to_release = true
hvcs = "github"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "style", "refactor", "test", "docs", "chore", "ci", "build"]

[tool.pyright]
include = ["src"]
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
typeCheckingMode = "basic"
